--- a/contactos.html
+++ b/contactos.html
@@ -129,7 +129,7 @@
             <p>Estamos disponíveis para receber<br> as suas propostas ou esclarecer<br> qualquer questão.</p>
             <p>Diga-nos o motivo do seu<br> contacto.</p>
             <a class="btn" href="">Iniciar um Projeto</a>
-            <a class="contact-btn btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
+            <a class="contact-btn btn-blue-ball btn-dark" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
           </div>
           <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
