--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-lg-5 col-md-5 col-sm-12">
                       <span class="subtitle">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
                       <h1>A evolução do seu<br> negócio começa<br> aqui e agora</h1>
-                      <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+                      <a class="btn-blue-ball btn-dark" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5"></div>
@@ -167,7 +167,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <p>Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade, para que se possa focar nos seus clientes.</p>
-          <a class="btn-blue-ball btn-light" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
+          <a class="btn-blue-ball btn-light" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
         </div>
       </div>
     </div>
@@ -227,7 +227,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12">
           <span class="subtitle">INDÚSTRIAS</span>
           <h2>Trabalhamos projetos &<br> indústrias nos mais<br> variados setores</h2>
-          <a class="btn-blue-ball btn-light" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
+          <a class="btn-blue-ball btn-light" href="./industrias.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
@@ -238,13 +238,13 @@
         <div class="col-lg-7 col-md-12 col-sm-12 spacer">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 img-grid">
-              <a href="">
+              <a href="./industria-grande-distribuicao-e-consumo.html">
                 <div class="img-container">
                   <img class="img-fluid" src="img/01-industries-img.jpg">
                   <span>Grande distribuição<br>& Consumo</span>
                 </div>
               </a>
-              <a href="">
+              <a href="./industria-grande-distribuicao-e-consumo.html">
                 <div class="img-container">
                   <img class="img-fluid" src="img/03-industries-img.jpg">
                   <span>Saúde</span>
@@ -252,13 +252,13 @@
               </a>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 img-grid top-offset">
-              <a href="">
+              <a href="./industria-grande-distribuicao-e-consumo.html">
                 <div class="img-container">
                   <img class="img-fluid" src="img/02-industries-img.jpg">
                   <span>Automóvel</span>
                 </div>
               </a>
-              <a href="">
+              <a href="./industria-grande-distribuicao-e-consumo.html">
                 <div class="img-container">
                   <img class="img-fluid" src="img/04-industries-img.jpg">
                   <span>Retalho</span>
@@ -301,7 +301,7 @@
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">INOBUZZ: Otimização de recursos em contexto digital</h3>
             <span class="article-short">Marque presença na Live através do Facebook ou do Youtube, no próximo dia 7 de Outubro, pelas 18H.</span><br>
-            <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-dark blue-ball-inverted" href="./blogpost.html"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
         </div>
       </div>
@@ -310,7 +310,7 @@
     <div class="wrapper">
       <div class="row articles">
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <a href="">
+          <a href="./blogpost.html">
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">Título do artigo nº 01</h3>
             <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
@@ -318,7 +318,7 @@
             <hr class="mobile article-spacer">
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <a href="">
+          <a href="./blogpost.html">
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">Título do artigo nº 02</h3>
             <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
@@ -326,7 +326,7 @@
             <hr class="mobile article-spacer">
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <a href="">
+          <a href="./blogpost.html">
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">Título do artigo nº 03</h3>
             <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
