--- a/industria-grande-distribuicao-e-consumo.html
+++ b/industria-grande-distribuicao-e-consumo.html
@@ -144,25 +144,25 @@
           <div class="carousel-wrapper spacer">
               <div class="owl-carousel owl-theme right-slider">
                 <div class="item">
-                  <a href="">
+                  <a href="./industria-grande-distribuicao-e-consumo.html">
                     <img src="img/01-industries-img.jpg">
                     <span class="service-title">Grande Distribuição & Consumo</span>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="">
+                  <a href="./industria-grande-distribuicao-e-consumo.html">
                     <img src="img/02-industries-img.jpg">
                     <span class="service-title">Automóvel</span>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="">
+                  <a href="./industria-grande-distribuicao-e-consumo.html">
                     <img src="img/03-industries-img.jpg">
                     <span class="service-title">Saúde</span>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="">
+                  <a href="./industria-grande-distribuicao-e-consumo.html">
                     <img src="img/04-industries-img.jpg">
                     <span class="service-title">Retalho</span>
                   </a>
