--- a/industrias.html
+++ b/industrias.html
@@ -148,7 +148,7 @@
               <div class="col-lg-6 col-md-6 col-sm-12">
                 <p><strong>A nossa experiência no sector da Grande Distribuição & Consumo é diversa.</strong></p>
                 <p>Somos abordados por desafios nas mais variantes áreas, e trabalhamos para responder ao objetivo do seu projeto.</p>
-                <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+                <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href="./industria-grande-distribuicao-e-consumo.html"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
               </div>
               <div class="col-lg-5 col-md-5 col-sm-12"></div>
             </div>
@@ -346,7 +346,7 @@
             <div class="col-lg-6 col-md-6 col-sm-12">
               <h3>Não encontra o seu setor? Desafie-nos</h3>
               <p>Fale connosco e veja o que podemos fazer pelo seu negócio</p>
-              <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+              <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href="./contactos.html"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12"></div>
           </div>
@@ -365,7 +365,7 @@
           <h2>Adicionamos valor<br> ao seu futuro</h2>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href=""><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
+          <a class="btn-blue-ball btn-dark" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
         </div>
       </div>
       <div class="row">
@@ -374,7 +374,7 @@
           <div class="carousel-wrapper spacer">
               <div class="owl-carousel owl-theme right-slider">
                 <div class="item">
-                  <a href="">
+                  <a href="./servicos.html">
                     <div class="img-label-container">
                       <img src="img/01-carousel-img.jpg">
                       <span class="service-title">Consultoria & Estratégia</span>     
@@ -383,7 +383,7 @@
                   <p>Desenvolvemos planos para atingir os seus objetivos mais cedo.</p>
                 </div>
                 <div class="item">
-                  <a href="">
+                  <a href="./servicos.html">
                     <div class="img-label-container">
                       <img src="img/02-carousel-img.jpg">
                       <span class="service-title">Transformação Digital</span>
@@ -392,7 +392,7 @@
                   <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
                 </div>
                 <div class="item">
-                  <a href="">
+                  <a href="./servicos.html">
                     <div class="img-label-container">
                       <img src="img/03-carousel-img.jpg">
                       <span class="service-title">Consumer Insight</span>
