--- a/sobre.html
+++ b/sobre.html
@@ -197,7 +197,7 @@
           <h2>Adicionamos valor<br> ao seu futuro</h2>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
+          <a class="btn-blue-ball btn-dark" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
         </div>
       </div>
       <div class="row">
