--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">INOBUZZ: Otimização de recursos em contexto digital</h3>
             <span class="article-short">Marque presença na Live através do Facebook ou do Youtube, no próximo dia 7 de Outubro, pelas 18H.</span><br>
-            <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-dark blue-ball-inverted" href="./blogpost.html"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
         </div>
       </div>
@@ -118,7 +118,7 @@
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-right" href="blogpost.html">
+          <a class="padding-right" href="./blogpost.html">
             <img class="img-fluid" src="img/01-servicos-img.jpg">
             <div class="article-info">
               <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
@@ -129,7 +129,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-left" href="blogpost.html">
+          <a class="padding-left" href="./blogpost.html">
             <img class="img-fluid" src="img/02-servicos-img.jpg">
             <div class="article-info">
               <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
@@ -140,7 +140,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-right" href="blogpost.html">
+          <a class="padding-right" href="./blogpost.html">
             <img class="img-fluid" src="img/01-servicos-img.jpg">
             <div class="article-info">
               <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
@@ -151,7 +151,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-left" href="blogpost.html">
+          <a class="padding-left" href="./blog.html">
             <img class="img-fluid" src="img/02-servicos-img.jpg">
             <div class="article-info">
               <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
@@ -183,7 +183,7 @@
             <span class="subtitle">SOMOS BUZZBEAT</span>
             <h2>Somos uma equipa<br> de especialistas<br> ao seu dispor</h2>
             <p>Trabalhamos lado a lado para que os seus projetos alcancem o máximo potencial</p>
-            <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+            <a class="btn-blue-ball btn-dark" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
           </div>
         </div>
       </div>
