--- a/blogpost.html
+++ b/blogpost.html
@@ -106,7 +106,7 @@
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <span class="subtitle">00 SET 2020</span>
+          <span class="subtitle">00 SET 2020</span><br>
           <span class="subtitle">Por Pedro Gama</span>
         </div>
         <div class="col-lg-8 col-md-8 col-sm-12">
