--- a/index.html
+++ b/index.html
@@ -190,21 +190,6 @@
             </div>
         </div>
       </div>
-      
-      <div class="col-lg-10 col-md-10 col-sm-12">
-        <div class="carousel-wrapper">
-            <div class="owl-carousel owl-theme left-slider">
-              <div class="item"><a href=""><img src="img/01-carousel-img.jpg"><span class="service-title">Criatividade</span></a></div>
-              <div class="item"><a href=""><img src="img/02-carousel-img.jpg"><span class="service-title">Marketing</span></a></div>
-              <div class="item"><a href=""><img src="img/03-carousel-img.jpg"><span class="service-title">Formação</span></a></div>
-              <div class="item"><a href=""><img src="img/04-carousel-img.jpg"><span class="service-title">E-commerce Performance</span></a></div>
-              <div class="item"><a href=""><img src="img/05-carousel-img.jpg"><span class="service-title">Consultoria & Estratégia</span></a></div>
-              <div class="item"><a href=""><img src="img/06-carousel-img.jpg"><span class="service-title">Transformação Digital</span></a></div>
-              <div class="item"><a href=""><img src="img/03-carousel-img.jpg"><span class="service-title">Consumer Insight</span></a></div>
-              <div class="item"><a href=""><img src="img/05-carousel-img.jpg"><span class="service-title">Inovação em Tecnologia</span></a></div>
-            </div>
-        </div>
-      </div>
 
       <div class="col-lg-2 col-md-2"></div>
     </div>
@@ -275,13 +260,13 @@
 
   <section class="homepage section-3">
     <div class="wrapper">
-      <div class="row">
+      <div class="row align-bottom">
         <div class="col-lg-9 col-md-9">
           <span class="subtitle">INSIGHTS</span>
           <h2>Estamos sempre<br> a aprender, e<br> escrevemos sobre isso.</h2>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
+          <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Insights</span></a>
         </div>
       </div>
     </div>
