--- a/industrias.html
+++ b/industrias.html
@@ -113,7 +113,7 @@
 
   <section class="industry section-1">
     <div class="wrapper">
-      <div class="row align-bottom">
+      <div class="row align-top">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <span class="subtitle">EXPERIÊNCIA</span>
         </div>
@@ -121,8 +121,8 @@
           <h3>Construimos a<br> estratégia ideal<br> para o seu público</h3>
         </div>
         <div class="col-lg-7 col-md-7 col-sm-12">
-          <p>Exploramos o caminho ideal para que o seu produto, o seu serviço, o seu negócio alcancem os objetivos definidos e se destaquem no contexto envolvente onde estão inseridos</p>
-          <p>Explore as indústrias onde já trabalhamos, e descubra o que podemos fazer pelo seu negócio</p>
+          <p class="lead">Exploramos o caminho ideal para que o seu produto, o seu serviço, o seu negócio alcancem os objetivos definidos e se destaquem no contexto envolvente onde estão inseridos</p>
+          <p class="lead">Explore as indústrias onde já trabalhamos, e descubra o que podemos fazer pelo seu negócio</p>
         </div>
       </div>
     </div>
@@ -330,7 +330,7 @@
 
     <button class="accordion">
       <h3 class="blue-txt">A sua Indústria</h3>
-      <div class="btn-go"><img src="img/arrow-right.svg"></div>
+      <div class="btn-go"><img src="img/arrow-right-blue.svg"></div>
     </button>
     <div class="panel always-open">
       <div class="row">
