--- a/servicos.html
+++ b/servicos.html
@@ -122,7 +122,7 @@
         </div>
         <div class="col-lg-7 col-md-7 col-sm-12">
           <div class="padding-left">
-            <p>Da criação de funis de geração de leads omnicanal, ao reforço da marca nas redes sociais, a nossa abordagem multidisciplinar oferece-lhe soluções end-to-end para atingir os seus objetivos antecipadamente.</p>
+            <p class="lead">Da criação de funis de geração de leads omnicanal, ao reforço da marca nas redes sociais, a nossa abordagem multidisciplinar oferece-lhe soluções end-to-end para atingir os seus objetivos antecipadamente.</p>
           </div>
         </div>
       </div>
