--- a/sobre.html
+++ b/sobre.html
@@ -101,7 +101,7 @@
 
   <section class="about section-1">
     <div class="wrapper">
-      <div class="row align-center">
+      <div class="row align-top">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <span class="subtitle">COMPROMISSO</span>
         </div>
@@ -112,8 +112,8 @@
         </div>
         <div class="col-lg-7 col-md-7 col-sm-12">
           <div class="padding-left">
-            <p>A Buzzbeat é a soma das capacidades técnicas, estratégicas e criativas, que trabalham no sentido de transformar projetos, serviços, marcas em experiências de valor tanto para as pessoas como para as empresas</p>
-            <p>Estamos lado a lado com as empresas e marcas para desenhar a sua estratégia, repensar a sua presença no mercado, transformar digitalmente o seu negócio.</p>
+            <p class="lead">A Buzzbeat é a soma das capacidades técnicas, estratégicas e criativas, que trabalham no sentido de transformar projetos, serviços, marcas em experiências de valor tanto para as pessoas como para as empresas</p>
+            <p class="lead">Estamos lado a lado com as empresas e marcas para desenhar a sua estratégia, repensar a sua presença no mercado, transformar digitalmente o seu negócio.</p>
           </div>
         </div>
       </div>
