--- a/servicos.html
+++ b/servicos.html
@@ -130,21 +130,25 @@
   </section>
 
   <section class="services section-2">
-    <div class="wrapper">
+    <div class="service-wrapper">
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12">
-          <div class="img-label padding-right">
+          <div class="img-label">
             <div class="blue-label"><span>Consultoria<br> & Estratégia</span></div>
             <img class="img-fluid" src="img/01-servicos-img.jpg">
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12">
-          <div class="padding-left">
+        <div class="col-lg-1 col-md-1 col-sm-12 desktop">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="padding-right">
             <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
             <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="wrapper">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6">
           <ul>
@@ -183,21 +187,25 @@
   </section>
 
   <section class="services section-2">
-    <div class="wrapper">
+    <div class="service-wrapper odd">
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12 go-right">
-          <div class="img-label padding-left">
+          <div class="img-label">
             <div class="blue-label"><span>Transformação<br> Digital</span></div>
             <img class="img-fluid" src="img/02-servicos-img.jpg">
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 go-left">
-          <div class="padding-right">
+        <div class="col-lg-1 col-md-1 col-sm-12 go-center desktop">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 go-left">
+          <div class="padding-left">
             <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
             <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="wrapper">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6">
           <ul>
@@ -236,21 +244,25 @@
   </section>
 
   <section class="services section-2">
-    <div class="wrapper">
+    <div class="service-wrapper">
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12">
-          <div class="img-label padding-right">
+          <div class="img-label">
             <div class="blue-label"><span>Consumer<br> Insight</span></div>
             <img class="img-fluid" src="img/03-servicos-img.jpg">
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12">
-          <div class="padding-left;">
+        <div class="col-lg-1 col-md-1 col-sm-12 desktop">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="padding-right">
             <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
             <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="wrapper">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6">
           <ul>
@@ -289,21 +301,25 @@
   </section>
 
   <section class="services section-2">
-    <div class="wrapper">
+    <div class="service-wrapper odd">
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12 go-right">
-          <div class="img-label padding-left">
+          <div class="img-label">
             <div class="blue-label"><span>Inovação<br> em Tecnologia</span></div>
             <img class="img-fluid" src="img/04-servicos-img.jpg">
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 go-left">
-          <div class="padding-right">
+        <div class="col-lg-1 col-md-1 col-sm-12 go-center desktop">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 go-left">
+          <div class="padding-left">
             <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
             <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="wrapper">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6">
           <ul>
@@ -342,21 +358,25 @@
   </section>
 
   <section class="services section-2">
-    <div class="wrapper">
+    <div class="service-wrapper">
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12">
-          <div class="img-label padding-right">
+          <div class="img-label">
            <div class="blue-label"><span>Criatividade</span></div>
            <img class="img-fluid" src="img/05-servicos-img.jpg">
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12">
-          <div class="padding-left">
+        <div class="col-lg-1 col-md-1 col-sm-12 desktop">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="padding-right">
             <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
             <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="wrapper">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6">
           <ul>
@@ -395,74 +415,25 @@
   </section>
 
   <section class="services section-2">
-    <div class="wrapper">
+    <div class="service-wrapper odd">
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12 go-right">
-          <div class="img-label padding-left">
+          <div class="img-label">
             <div class="blue-label"><span>Marketing</span></div>
             <img class="img-fluid" src="img/06-servicos-img.jpg">
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 go-left">
-          <div class="padding-right">
-            <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
-            <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
-          </div>
+        <div class="col-lg-1 col-md-1 col-sm-12 go-center desktop">
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-3 col-md-3 col-sm-6">
-          <ul>
-            <li><a href="">Marketing Digital</a></li>
-            <li><a href="">Inbound Marketing</a></li>
-            <li><a href="">Marketing de Conteúdo</a></li>
-            <li><a href="">Outbound Marketing</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6">
-          <ul>
-            <li><a href="">Marketing Digital</a></li>
-            <li><a href="">Inbound Marketing</a></li>
-            <li><a href="">Marketing de Conteúdo</a></li>
-            <li><a href="">Outbound Marketing</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6">
-          <ul>
-            <li><a href="">Marketing Digital</a></li>
-            <li><a href="">Inbound Marketing</a></li>
-            <li><a href="">Marketing de Conteúdo</a></li>
-            <li><a href="">Outbound Marketing</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6">
-          <ul>
-            <li><a href="">Marketing Digital</a></li>
-            <li><a href="">Inbound Marketing</a></li>
-            <li><a href="">Marketing de Conteúdo</a></li>
-            <li><a href="">Outbound Marketing</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="services section-2">
-    <div class="wrapper">
-      <div class="row align-center">
-        <div class="col-lg-7 col-md-7 col-sm-12">
-          <div class="img-label padding-right">
-            <div class="blue-label"><span>Formação</span></div>
-            <img class="img-fluid" src="img/06-servicos-img.jpg">
-          </div>
-        </div>
-        <div class="col-lg-5 col-md-5 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12 go-left">
           <div class="padding-left">
             <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
             <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="wrapper">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6">
           <ul>
@@ -501,21 +472,82 @@
   </section>
 
   <section class="services section-2">
-    <div class="wrapper">
+    <div class="service-wrapper">
       <div class="row align-center">
-        <div class="col-lg-7 col-md-7 col-sm-12 go-right">
-          <div class="img-label padding-left">
-            <div class="blue-label"><span>E-commerce<br> Performance</span></div>
+        <div class="col-lg-7 col-md-7 col-sm-12">
+          <div class="img-label">
+            <div class="blue-label"><span>Formação</span></div>
             <img class="img-fluid" src="img/06-servicos-img.jpg">
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 go-left">
+        <div class="col-lg-1 col-md-1 col-sm-12 desktop">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="padding-right">
             <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
             <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="wrapper">
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <ul>
+            <li><a href="">Marketing Digital</a></li>
+            <li><a href="">Inbound Marketing</a></li>
+            <li><a href="">Marketing de Conteúdo</a></li>
+            <li><a href="">Outbound Marketing</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <ul>
+            <li><a href="">Marketing Digital</a></li>
+            <li><a href="">Inbound Marketing</a></li>
+            <li><a href="">Marketing de Conteúdo</a></li>
+            <li><a href="">Outbound Marketing</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <ul>
+            <li><a href="">Marketing Digital</a></li>
+            <li><a href="">Inbound Marketing</a></li>
+            <li><a href="">Marketing de Conteúdo</a></li>
+            <li><a href="">Outbound Marketing</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <ul>
+            <li><a href="">Marketing Digital</a></li>
+            <li><a href="">Inbound Marketing</a></li>
+            <li><a href="">Marketing de Conteúdo</a></li>
+            <li><a href="">Outbound Marketing</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="services section-2">
+    <div class="service-wrapper odd">
+      <div class="row align-center">
+        <div class="col-lg-7 col-md-7 col-sm-12 go-right">
+          <div class="img-label">
+            <div class="blue-label"><span>E-commerce<br> Performance</span></div>
+            <img class="img-fluid" src="img/06-servicos-img.jpg">
+          </div>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-12 go-center desktop">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 go-left">
+          <div class="padding-left">
+            <p><strong>Desenvolvemos planos para atingir os seus objetivos mais cedo.</strong></p>
+            <p>O Marketing de hoje assenta na correta combinação de táticas e ações numa cada vez maior multiplicidade de canais para alcançar, envolver e converter efetivamente clientes existentes e potenciais.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6">
           <ul>
