--- a/blog.html
+++ b/blog.html
@@ -118,48 +118,56 @@
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-right" href="./blogpost.html">
-            <img class="img-fluid" src="img/01-servicos-img.jpg">
-            <div class="article-info">
-              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-              <h3 class="article-title">Título do artigo nº 01</h3>
-              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-              <p><strong>Ler mais</strong></p>
-            </div>
-          </a>
+          <div class="padding-right">
+            <a href="./blogpost.html">
+              <img class="img-fluid" src="img/01-servicos-img.jpg">
+              <div class="article-info">
+                <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+                <h3 class="article-title">Título do artigo nº 01</h3>
+                <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+                <p><strong>Ler mais</strong></p>
+              </div>
+            </a>
+          </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-left" href="./blogpost.html">
-            <img class="img-fluid" src="img/02-servicos-img.jpg">
-            <div class="article-info">
-              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-              <h3 class="article-title">Título do artigo nº 01</h3>
-              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-              <p><strong>Ler mais</strong></p>
-            </div>
-          </a>
+          <div class="padding-left">
+            <a href="./blogpost.html">
+              <img class="img-fluid" src="img/02-servicos-img.jpg">
+              <div class="article-info">
+                <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+                <h3 class="article-title">Título do artigo nº 01</h3>
+                <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+                <p><strong>Ler mais</strong></p>
+              </div>
+            </a>
+          </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-right" href="./blogpost.html">
-            <img class="img-fluid" src="img/01-servicos-img.jpg">
-            <div class="article-info">
-              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-              <h3 class="article-title">Título do artigo nº 01</h3>
-              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-              <p><strong>Ler mais</strong></p>
-            </div>
-          </a>
+          <div class="padding-right">
+            <a href="./blogpost.html">
+              <img class="img-fluid" src="img/01-servicos-img.jpg">
+              <div class="article-info">
+                <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+                <h3 class="article-title">Título do artigo nº 01</h3>
+                <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+                <p><strong>Ler mais</strong></p>
+              </div>
+            </a>
+          </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-left" href="./blog.html">
-            <img class="img-fluid" src="img/02-servicos-img.jpg">
-            <div class="article-info">
-              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-              <h3 class="article-title">Título do artigo nº 01</h3>
-              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-              <p><strong>Ler mais</strong></p>
-            </div>
-          </a>
+          <div class="padding-left">
+            <a href="./blog.html">
+              <img class="img-fluid" src="img/02-servicos-img.jpg">
+              <div class="article-info">
+                <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+                <h3 class="article-title">Título do artigo nº 01</h3>
+                <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+                <p><strong>Ler mais</strong></p>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
