--- a/sobre.html
+++ b/sobre.html
@@ -110,7 +110,8 @@
             <h3>A adicionar valor ao mercado digital desde 2009</h3>
           </div>
         </div>
-        <div class="col-lg-7 col-md-7 col-sm-12">
+        <div class="col-lg-1 col-md-1 col-sm-12"></div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="padding-left">
             <p class="lead">A Buzzbeat é a soma das capacidades técnicas, estratégicas e criativas, que trabalham no sentido de transformar projetos, serviços, marcas em experiências de valor tanto para as pessoas como para as empresas</p>
             <p class="lead">Estamos lado a lado com as empresas e marcas para desenhar a sua estratégia, repensar a sua presença no mercado, transformar digitalmente o seu negócio.</p>
@@ -121,13 +122,13 @@
   </section>
 
   <section class="about section-2">
-    <div class="wrapper">
+    <div class="service-wrapper">
       <div class="row align-center">
         <div class="col-lg-8 col-md-8 col-sm-12">
           <div class="img-blue padding-right"><img class="img-fluid" src="img/01-about_us-img.jpg"></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="padding-left">
+          <div class="padding-right">
             <span class="subtitle">DEFINIMOS</span>
             <h3>Estratégia</h3>
             <p>Criamos planos para atingir os seus objetivos mais cedo.</p>
@@ -139,13 +140,13 @@
   </section>
 
   <section class="about section-2">
-    <div class="wrapper">
+    <div class="service-wrapper odd">
       <div class="row align-center">
         <div class="col-lg-8 col-md-8 col-sm-12 go-right">
-          <div class="img-blue padding-left"><img class="img-fluid" src="img/02-about_us-img.jpg"></div>
+          <div class="img-blue odd padding-left"><img class="img-fluid" src="img/02-about_us-img.jpg"></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 go-left">
-          <div class="padding-right">
+          <div class="padding-left">
             <span class="subtitle">PENSAMOS</span>
             <h3>Marketing</h3>
             <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
@@ -156,13 +157,13 @@
   </section>
 
   <section class="about section-2">
-    <div class="wrapper">
+    <div class="service-wrapper">
       <div class="row align-center">
         <div class="col-lg-8 col-md-8 col-sm-12">
           <div class="img-blue padding-right"><img class="img-fluid" src="img/03-about_us-img.jpg"></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="padding-left">
+          <div class="padding-right">
             <span class="subtitle">PRODUZIMOS</span>
             <h3>Criatividade<br> & Desenvolvimento</h3>
             <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Criatividade & Desenvolvimento</p>
@@ -173,13 +174,13 @@
   </section>
 
   <section class="about section-2">
-    <div class="wrapper">
+    <div class="service-wrapper odd">
       <div class="row align-center">
         <div class="col-lg-8 col-md-8 col-sm-12 go-right">
-          <div class="img-blue padding-left"><img class="img-fluid" src="img/04-about_us-img.jpg"></div>
+          <div class="img-blue odd padding-left"><img class="img-fluid" src="img/04-about_us-img.jpg"></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 go-left">
-          <div class="padding-right">
+          <div class="padding-left">
             <span class="subtitle">Atuamos</span>
             <h3>Formação</h3>
             <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
