--- a/servicos.html
+++ b/servicos.html
@@ -596,11 +596,13 @@
           <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
         </div>
       </div>
+    </div>
+    <div class="service-wrapper odd">
       <div class="row">
         <div class="col-lg-2 col-md-2"></div>
         <div class="col-lg-10 col-md-10 col-sm-12 desktop">
           <div class="carousel-wrapper spacer">
-              <div class="owl-carousel owl-theme right-slider">
+              <div class="owl-carousel owl-theme">
                 <div class="item">
                   <a href="industria-grande-distribuicao-e-consumo.html">
                     <img src="img/01-industries-img.jpg">
