--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@
 
   <!-- Module Video Banner -->
   <div class="video-banner-wrap">
-    <iframe width="100%" height="500" src="https://www.youtube.com/embed/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="play-btn"><img src="./img/play-btn.svg"></div>
+    <video poster="./img/video-homepage.jpg">
+      <source src="movie.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
   <!-- END Module Video Banner -->
 
