--- a/sobre.html
+++ b/sobre.html
@@ -95,7 +95,11 @@
 
   <div class="larger-wrapper">
     <div class="about video-banner-wrap">
-      <iframe width="100%" height="500" src="https://www.youtube.com/embed/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="play-btn"><img src="./img/play-btn.svg"></div>
+      <video poster="./img/video-about-us.jpg">
+        <source src="movie.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
     </div>
   </div>
 
@@ -201,11 +205,13 @@
           <a class="btn-blue-ball btn-dark" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
         </div>
       </div>
+    </div>
+    <div class="service-wrapper odd">
       <div class="row">
         <div class="col-lg-2 col-md-2"></div>
         <div class="col-lg-10 col-md-10 col-sm-12 desktop">
           <div class="carousel-wrapper spacer">
-            <div class="owl-carousel owl-theme right-slider">
+            <div class="owl-carousel owl-theme">
               <div class="item">
                 <a href="">
                   <div class="img-label-container">
