--- a/index.html
+++ b/index.html
@@ -160,9 +160,11 @@
   <section class="homepage section-1">
     
     <div class="wrapper">
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12">
+      <div class="row align-top">
+        <div class="col-lg-12 col-md-12 col-sm-12">
           <span class="subtitle">O QUE FAZEMOS</span>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <h2>Adicionamos valor<br> ao seu futuro</h2>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -262,7 +264,7 @@
 
   </section>
 
-  <section class="homepage section-3">
+  <section class="homepage section-3 dark-bg">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-9 col-md-9">
