--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
         <div class="col-lg-6 col-md-6 col-sm-12">
           <h2>Adicionamos valor<br> ao seu futuro</h2>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <p>Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade, para que se possa focar nos seus clientes.</p>
-          <a class="btn-blue-ball btn-light" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
+        <div class="col-lg-6 col-md-6 col-sm-12 animista fade-in-bottom">
+          <p class="anim-delay-0">Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade, para que se possa focar nos seus clientes.</p>
+          <a class="btn-blue-ball btn-light anim-delay-1" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
         </div>
       </div>
     </div>
@@ -439,6 +439,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
+  <script src="https://unpkg.com/scrollama"></script>
   <script src="js/owl.carousel.js"></script>
   <script src="js/main.js"></script>
 
