--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
                     <div class="col-lg-1 col-md-12 col-sm-12">
                       <span><b>01</b>/03</span>
                     </div>
-                    <div class="col-lg-5 col-md-5 col-sm-12">
-                      <span class="subtitle">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
-                      <h1>A evolução do seu<br> negócio começa<br> aqui e agora</h1>
-                      <a class="btn-blue-ball btn-dark" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+                    <div class="col-lg-5 col-md-5 col-sm-12 animista fade-in-bottom">
+                      <span class="subtitle anim-delay-1">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
+                      <h1><span class="anim-delay-2">A</span> <span class="anim-delay-3">evolução</span> <span class="anim-delay-4">do</span> <span class="anim-delay-5">seu</span><br> <span class="anim-delay-6">negócio</span> <span class="anim-delay-7">começa</span><br> <span class="anim-delay-8">aqui</span> <span class="anim-delay-9">e</span> <span class="anim-delay-10">agora</span></h1>
+                      <a class="btn-blue-ball btn-dark anim-delay-11" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5"></div>
                   </div>
-                  <div class="col-lg-6 desktop">
-                    <div class="social">
+                  <div class="col-lg-6 desktop animista fade-in-bottom">
+                    <div class="social anim-delay-1">
                       <div class="social-media"> 
                         <span>SOMOS BUZZBEAT</span>
                         <div class="white-line"></div>
@@ -136,13 +136,13 @@
      <!-- END Module Main Slider -->
   </section>
 
-  <section class="offset-project-cta desktop">
+  <section class="offset-project-cta desktop animista slide-in-bottom">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-7 col-md-7 col-sm-12">
 
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12">
+        <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
           <nav class="slider-nav">
             <a href="#slide-0" class="active"></a> 
             <a href="#slide-1"></a> 
@@ -159,17 +159,17 @@
 
   <section class="homepage section-1">
     
-    <div class="wrapper">
+    <div class="wrapper animista fade-in-bottom">
       <div class="row align-top">
         <div class="col-lg-12 col-md-12 col-sm-12">
-          <span class="subtitle">O QUE FAZEMOS</span>
+          <span class="subtitle anim-delay-1">O QUE FAZEMOS</span>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <h2>Adicionamos valor<br> ao seu futuro</h2>
+          <h2><span class="anim-delay-1">Adicionamos</span> <span class="anim-delay-2">valor</span><br> <span class="anim-delay-3">ao</span> <span class="anim-delay-4">seu</span> <span class="anim-delay-5">futuro</span></h2>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 animista fade-in-bottom">
-          <p class="anim-delay-0">Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade, para que se possa focar nos seus clientes.</p>
-          <a class="btn-blue-ball btn-light anim-delay-1" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <p class="anim-delay-6">Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade, para que se possa focar nos seus clientes.</p>
+          <a class="anim-delay-7 btn-blue-ball btn-light" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
         </div>
       </div>
     </div>
@@ -201,12 +201,14 @@
   </section>
 
   <!-- Module Video Banner -->
-  <div class="video-banner-wrap">
-    <div class="play-btn"><img src="./img/play-btn.svg"></div>
-    <video poster="./img/video-homepage.jpg">
-      <source src="movie.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+  <div class="animista slide-in-left">
+    <div class="video-banner-wrap anim-delay-1">
+      <div class="play-btn anim-delay-2"><img src="./img/play-btn.svg"></div>
+      <video poster="./img/video-homepage.jpg">
+        <source src="movie.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
   </div>
   <!-- END Module Video Banner -->
 
@@ -215,10 +217,10 @@
     <div class="wrapper">
       
       <div class="row">
-        <div class="col-lg-6 col-md-12 col-sm-12">
-          <span class="subtitle">INDÚSTRIAS</span>
-          <h2>Trabalhamos projetos &<br> indústrias nos mais<br> variados setores</h2>
-          <a class="btn-blue-ball btn-light" href="./industrias.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
+        <div class="col-lg-6 col-md-12 col-sm-12 animista fade-in-bottom">
+          <span class="subtitle anim-delay-1">INDÚSTRIAS</span>
+          <h2><span class="anim-delay-2">Trabalhamos</span> <span class="anim-delay-3">projetos</span> <span class="anim-delay-4">&</span><br> <span class="anim-delay-5">indústrias</span> <span class="anim-delay-6">nos</span> <span class="anim-delay-7">mais</span><br> <span class="anim-delay-8">variados</span> <span class="anim-delay-9">setores</span></h2>
+          <a class="btn-blue-ball btn-light anim-delay-10" href="./industrias.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
@@ -439,7 +441,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
+  <script src="https://unpkg.com/intersection-observer"></script>
   <script src="https://unpkg.com/scrollama"></script>
   <script src="js/owl.carousel.js"></script>
   <script src="js/main.js"></script>
